# cryptex

./: Cargo.toml  README.md  yubihsm_http_test.bat  yubihsm_http_test.sh
.cargo/: config.toml
.circleci/: config.yml
.github/workflows/: cryptex.yml
benches/: cipher_bench.rs
examples/: default_argon2_params.rs  default_memory_cost.rs
lox/: Cargo.toml
lox-cli/: Cargo.toml
lox-cli/src/: main.rs
lox/src/: error.rs  lib.rs
lox/src/keyring/: linux.rs  macos.rs  windows.rs
src/: error.rs  keyring.rs  lib.rs  main.rs
src/keyring/: encrypted_vfs.rs  keyringsecret.rs  kms.rs  linux.rs  macos.rs  mod.rs  sqlcipher.rs  windows.rs  yubihsm.rs
tests/: box.rs  default_argon2_params.rs  default_memory_cost.rs  threads.rs
