[package]
name = "cryptex"
authors = ["Michael Lodder <redmike7@gmail.com>"]
categories = []
description = """
Cryptex uses system keyrings to store and retrieve secrets
or a local file
"""
documentation = "https://docs.rs/cryptex/"
edition = "2024"
homepage = "https://github.com/mikelodder7/cryptex"
keywords = ["secrets", "vault", "keyring"]
license = "MIT/Apache-2.0"
repository = "https://github.com/mikelodder7/cryptex"
readme = "README.md"
version = "1.11.0"

[lib]
crate-type = ["staticlib", "rlib", "cdylib"]

[[bin]]
name = "cryptex"

[features]
default = ["linux-secret-service", "macos-keychain", "windows-credentials"]
file = ["argon2", "chacha20poly1305", "dirs", "rusqlite"]
linux-secret-service = ["secret-service", "users"]
macos-keychain = ["security-framework", "security-framework-sys", "core-foundation", "core-foundation-sys", "users"]
windows-credentials = ["winapi", "byteorder"]

[dependencies]
atty = "0.2"
clap = "2.33"
colored = "3.0"
hex = "0.4"
rpassword = "7"
serde = { version = "1", optional = true }
subtle = "2"
whoami = "1.6"
zeroize = { version = "1", features = ["zeroize_derive"] }

argon2 = { version = "0.5", optional = true }
chacha20poly1305 = { version = "0.10", optional = true }
dirs = { version = "6.0", optional = true }
rusqlite = { version = "0.37", features = ["bundled-sqlcipher-vendored-openssl"], optional = true }



[target.'cfg(any(target_os = "macos", target_os = "linux"))'.dependencies]
users = { version = "0.11", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = { version = "2.9", optional = true }
security-framework-sys = { version = "2.9", optional = true }
core-foundation = { version = "0.9", optional = true }
core-foundation-sys = { version = "0.8", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
secret-service = { version = "5", features = ["rt-tokio-crypto-rust"], optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["dpapi", "errhandlingapi", "wincred", "winerror"], optional = true }
byteorder = { version = "1.5", optional = true }
