[package]
name = "lox"
version = "0.4.0"
authors = ["Michael Lodder <redmike7@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib", "rlib", "cdylib"]

[features]
default = []

[dependencies]
failure = "0.1"
hex = "0.4"
rand = "0.7"
serde = { version = "1.0", optional = true }
subtle = "2.2"
whoami = "0.6"
zeroize = { version = "1.1", features = ["zeroize_derive"] }

[target.'cfg(any(target_os = "macos", target_os = "linux"))'.dependencies]
users = "0.9.1"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "0.3.1"
security-framework-sys = "0.3.1"
core-foundation = "0.6.4"
core-foundation-sys = "0.6.2"

[target.'cfg(target_os = "linux")'.dependencies]
secret-service = "1.0.0"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["dpapi", "wincred", "winerror"] }
byteorder = "1.3.2"

